--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,7 @@
 :root {
   --body-bg: #f9f9f9;
   --text-color: #151515;
+  --link-color: #6a983c;
 
   --text-font-stack: "Open Sans", "Arial", sans-serif;
   --heading-font-stack: "Poppins", "Arial", sans-serif;
@@ -102,4 +103,115 @@ a {
   margin-right: auto;
   background-color: #fff;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.15);
+}
+
+
+/* SITE-HEADER */
+.site-header__top {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-top: 16px;
+  padding-bottom: 16px;
+  border-bottom: 1px solid rgba(21, 21, 21, 0.05);
+  font-size: 12px;
+  line-height: normal;
+}
+
+.site-header__contacts {
+  display: flex;
+  align-items: center;
+}
+
+.site-header__chat-link {
+  margin-right: 33px;
+  color: var(--link-color);
+  text-decoration: none;
+}
+
+.site-header__chat-link:hover {
+  opacity: 0.8;
+}
+
+.site-header__chat-link:active {
+  opacity: 0.6;
+}
+
+.site-header__phone {
+  margin-right: 33px;
+  color: var(--text-color);
+  text-decoration: none;
+}
+
+.site-header__phone:hover {
+  opacity: 0.8;
+}
+
+.site-header__phone:active {
+  opacity: 0.6;
+}
+
+.site-header__email {
+  color: var(--text-color);
+  text-decoration: none;
+}
+
+.site-header__email:hover {
+  opacity: 0.8;
+}
+
+.site-header__email:active {
+  opacity: 0.6;
+}
+
+.site-header__top-nav {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+.site-header__top-nav-item:not(:last-child) {
+  margin-right: 38px;
+}
+
+.site-header__top-nav-link {
+  color: var(--link-color);
+  text-decoration: none;
+}
+
+.site-header__top-nav-link:hover {
+  opacity: 0.8;
+}
+
+.site-header__top-nav-link:active {
+  opacity: 0.6;
+}
+
+
+/* RESPONSIVENESS */
+@media only screen and (max-width: 900px) {
+  .container {
+    padding-left: 30px;
+    padding-right: 30px;
+  }
+}
+
+@media only screen and (max-width: 800px) {
+  .site-header__chat-link,
+  .site-header__phone {
+    margin-right: 25px;
+  }
+
+  .site-header__top-nav-item:not(:last-child) {
+    margin-right: 20px;
+  }
+}
+
+@media only screen and (max-width: 660px) {
+  .site-header__top {
+    display: none;
+  }
 }
