--- a/css/styles.css
+++ b/css/styles.css
@@ -220,7 +220,7 @@ a {
   border-radius: 12px;
   overflow: hidden;
   background-color: var(--body-bg);
-  background-image: url("../img/icon-search.svg");
+  background-image: url("../img/icon-search-bg.svg");
   background-repeat: no-repeat;
   background-position: right 16px center;
 }
@@ -265,6 +265,10 @@ a {
   color: var(--text-color);
 }
 
+.site-header__action-link--search-toggle {
+  display: none;
+}
+
 .site-header__action-link:not(:last-child) {
   margin-right: 40px;
 }
@@ -300,6 +304,45 @@ a {
   color: #fff;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.15);
 }
+
+
+/* MODAL */
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 99;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+.modal--open {
+  display: block;
+}
+
+.modal__dialog {
+  max-width: 500px;
+  margin-top: 50px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+
+/* SEARCH-MODAL */
+.search-modal__form {
+  display: flex;
+  flex-direction: column;
+}
+
+.search-modal__field {
+  padding: 10px;
+  border: 0;
+  border-radius: 5px;
+}
+
 
 
 /* RESPONSIVENESS */
@@ -338,6 +381,10 @@ a {
   .search-form {
     display: none;
   }
+
+  .site-header__action-link--search-toggle {
+    display: block;
+  }
 }
 
 @media only screen and (max-width: 800px) {
@@ -374,6 +421,10 @@ a {
 
   .site-header__action-link:not(:last-child) {
     margin-right: 30px;
+  }
+
+  .modal__dialog {
+    max-width: 90%;
   }
 }
 
